changed javax.base64encoding to javautil.base64